plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.12-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.cutegyuseok'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //swagger
    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    // Spring-Cloud-AWS
    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'

    //  jwt dependencies
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    //  JSONObject dependencies
    implementation group: 'org.json', name: 'json', version: '20160810'

    //  redis dependencies
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // QueryDSL JPA
    implementation 'com.querydsl:querydsl-jpa'
    // QFile 생성 및 가져오기
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}
